--- a/templates/book/products.html
+++ b/templates/book/products.html
@@ -211,13 +211,14 @@
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="newProductCardModalLabel">
+                        <h5 class="modal-title text-center mx-auto" id="newProductCardModalLabel">
                             Добавить продукт
                         </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                style="margin-left: 0"
                                 aria-label="Close"></button>
                     </div>
-                    <form method="post" id="newProductCardForm">
+                    <form method="post" id="newProductCardForm" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="modal-body mx-auto text-center w-50">
                             <div class="row">
@@ -234,9 +235,18 @@
                                     {{ form.name.label_tag }}
                                 </div>
                                 <div class="col">
-                                    {{ form.subcategory }}
+                                    {{ form.name }}
                                 </div>
                                 {{ form.name.errors }}
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    {{ form.designation.label_tag }}
+                                </div>
+                                <div class="col">
+                                    {{ form.designation }}
+                                </div>
+                                {{ form.designation.errors }}
                             </div>
                             <div class="row">
                                 <div>
@@ -278,18 +288,18 @@
                                 <div class="col">
                                     {{ form.energy_value.label_tag }}
                                 </div>
-                                <div class="col d-flex align-center justify-content-center">
+                                <div class="col-7 d-flex align-center justify-content-center">
                                     {{ form.energy_value }}
                                     <span class="mx-2"></span>{{ form.energy_value_unit }}
                                 </div>
-                                {{ form.energy_value.errors }}
+                                {{ form.energy_value.errors}}
                                 {{ form.energy_value_unit.errors }}
                             </div>
                             <div class="row">
                                 <div class="col">
                                     Белки
                                 </div>
-                                <div class="col d-flex">
+                                <div class="col-7 d-flex">
                                     {{ form.proteins }}<span>г.</span>
                                 </div>
                                 {{ form.proteins.errors }}
@@ -298,7 +308,7 @@
                                 <div class="col">
                                     Жиры
                                 </div>
-                                <div class="col d-flex">
+                                <div class="col-7 d-flex">
                                     {{ form.fats }}<span>г.</span>
                                 </div>
                                 {{ form.fats.errors }}
@@ -307,24 +317,22 @@
                                 <div class="col">
                                     Углеводы
                                 </div>
-                                <div class="col d-flex">
+                                <div class="col-7 d-flex">
                                     {{ form.carbohydrates }}<span>г.</span>
                                 </div>
                                 {{ form.carbohydrates.errors }}
                             </div>
-                            <div class="d-flex align-center justify-content-center">
+                            <div class="row align-center justify-content-center">
                                 <div class="form-file">
-                                    <input class="form-control form-file-input"
-                                           id="id_image"
-                                           type="file" name="image" accept="image/*">
+                                    {{ form.image }}
                                     <label class="form-file-label"
                                            for="id_image">
                                         <span class="form-file-text">Изображение продукта</span>
                                         <span class="form-file-button">Загрузить</span>
                                     </label>
                                 </div>
+                                {{ form.image.errors }}
                             </div>
-                            {{ form.image.errors }}
                         </div>
                         <div class="modal-footer justify-content-center">
                             <button type="submit" class="btn btn-apple">Сохранить</button>
@@ -333,6 +341,50 @@
                 </div>
             </div>
         </div>
+        <!-- New product card saving notification -->
+        {% if saved == True %}
+            <div class="modal fade" id="notificationModal" tabindex="-1"
+                 aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Карточка создана</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Созданная Вами карточка продукта отправлена на проверку модераторам.
+                            Скоро она появится в списке продуктов.
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-apple"
+                                    data-bs-dismiss="modal">Хорошо</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <script>
+                let notificationModal = new bootstrap.Modal(
+                    document.getElementById('notificationModal'), {
+                    keyboard: false
+                });
+                notificationModal.show()
+            </script>
+        {% elif saved == False %}
+            <script>
+                let newProductCardModal = new bootstrap.Modal(
+                    document.getElementById('newProductCardModal'), {
+                    keyboard: false
+                });
+                newProductCardModal.show()
+            </script>
+        {% endif %}
+        <script>
+            $('#id_image').on('change', function(){
+                let filePath = $(this).val().split('\\');
+                $('.form-file-text').html(filePath[filePath.length - 1]);
+            })
+        </script>
     {% endif %}
     <script>
         const categorySlug = getUrlParameter('category')
