--- a/templates/book/products.html
+++ b/templates/book/products.html
@@ -333,6 +333,10 @@
                                 </div>
                                 {{ form.image.errors }}
                             </div>
+                            <div>
+                                {{ form.captcha }}
+                                {{ form.captcha.errors }}
+                            </div>
                         </div>
                         <div class="modal-footer justify-content-center">
                             <button type="submit" class="btn btn-apple">Сохранить</button>
