--- a/templates/book/products.html
+++ b/templates/book/products.html
@@ -118,7 +118,7 @@
                                          class="card-img-top product-card-image img-fluid"
                                              alt="{{ product.name }}">
                                     {% else %}
-                                        <img src="{% static 'images/no_food_image.png' %}"
+                                        <img src="{% static 'images/icons/no_food_image.png' %}"
                                          class="card-img-top product-card-image img-fluid p-3"
                                              alt="{{ product.name }}">
                                     {% endif %}
