--- a/templates/app/app.html
+++ b/templates/app/app.html
@@ -1,9 +1,26 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     Хранилище
 {% endblock %}
 
 {% block content %}
-    Интерактивный список продуктов пользователя
+    <link rel="stylesheet" href="{% static 'css/app/app.css' %}">
+    <div class="container">
+        <div class="row">
+            <h3>Ваши продукты</h3>
+            <hr>
+        </div>
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-8">
+                <div id="productsTimeLine" class="row justify-content-center mt-5">
+                    <div class="spinner-border text-apple" role="status"></div>
+                </div>
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
+    <script type="text/babel" src="{% static 'js/app/app.js' %}"></script>
 {% endblock %}
