--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,3 +1,10 @@
+header {
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 100;
+}
+
 .navbar-brand {
     float: left;
     margin-left: 30px;
