--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,8 @@
         <!-- API -->
         <script type="text/javascript" src="{% static 'js/api.js' %}"></script>
 
+        {{ form.media }}
+
     </head>
     <body class="h-100 d-flex flex-column">
         {% load user_agents %}
