--- a/templates/book/products.html
+++ b/templates/book/products.html
@@ -218,7 +218,7 @@
                                 style="margin-left: 0"
                                 aria-label="Close"></button>
                     </div>
-                    <form method="post" id="newProductCardForm" enctype="multipart/form-data">
+                    <form method="post" id="newProductCardForm" class="modal-form" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="modal-body mx-auto text-center w-50">
                             <div class="row">
