--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Rajdhani&display=swap"
               rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Montserrat+Alternates:wght@300&display=swap"
+              rel="stylesheet">
 
         <!-- js-cookie -->
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
