--- a/templates/app/homepage.html
+++ b/templates/app/homepage.html
@@ -60,11 +60,10 @@
                         <div class="card">
                             <img src="{% static 'images/icons/calorie_calculator.png' %}"
                                  class="card-img-top p-2 mt-2"
-                                 alt="Учёт срока годности">
+                                 alt="Калькулятор калорийности">
                             <div class="card-body">
                                 <h5 class="card-text text-apple text-center balsamiq">
-                                    Отслеживать содержимое холодильника
-                                    и следить за сроком годности продуктов
+                                    Следить за калорийностью и питательностью продуктов
                                 </h5>
                             </div>
                         </div>
