--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,11 @@ a.text-apple:focus {
     border-color: #269926;
 }
 
+.bg-apple {
+  color: #fff;
+  background-color: #269926;
+}
+
 .btn-apple {
     color: #fff;
     background-color: #269926;
@@ -194,4 +199,8 @@ ul.errorlist li {
 
 .balsamiq {
     font-family: 'Balsamiq Sans', cursive;;
+}
+
+h5 {
+    font-size: calc(0.5rem + 1vw)
 }
