--- a/templates/app/homepage.html
+++ b/templates/app/homepage.html
@@ -8,7 +8,10 @@
 {% block content %}
     <link rel="stylesheet" href="{% static 'css/app/homepage.css' %}">
     <div class="container-fluid">
-        <div class="row mt-3">
+        <a href="{% url 'home' host 'app' %}" class="row d-flex justify-content-center mt-4">
+            <h1 id="company-title" class="text-apple w-auto py-3 px-5">FooDate</h1>
+        </a>
+        <div class="row mt-4">
             <h1 class="montserrat-alternates text-center text-apple">
                 Чем мы занимаемся?
             </h1>
@@ -20,14 +23,14 @@
         <div class="row justify-content-center mb-3">
             <hr class="text-apple text-center w-50">
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="row">
                 <h1 class="montserrat-alternates text-center text-apple">
                     Вы можете
                 </h1>
             </div>
-            <div class="row mt-3 row-cols-4">
-                <div class="col-3">
+            <div class="row mt-3 row-cols-4 row-cols-md-4 g-4">
+                <div class="col">
                     <a href="{% url 'app' host 'app' %}">
                         <div class="card">
                             <img src="{% static 'images/icons/fridge.png' %}"
@@ -42,7 +45,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-3">
+                <div class="col">
                     <div class="card">
                         <img src="{% static 'images/icons/products_list.png' %}"
                              class="card-img-top p-4 mt-2"
@@ -53,9 +56,12 @@
                                 и всегда знать, что нужно купить
                             </h5>
                         </div>
+                        <div class="card-footer p-0 d-grid border-0">
+                            <span class="badge bg-apple in-dev">В разработке</span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col">
                     <a href="{% url 'products' host 'book' %}">
                         <div class="card">
                             <img src="{% static 'images/icons/calorie_calculator.png' %}"
@@ -69,7 +75,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-3">
+                <div class="col">
                     <a href="{% url 'recipes' host 'book' %}">
                         <div class="card">
                             <img src="{% static 'images/icons/recipe_book.png' %}"
@@ -80,6 +86,9 @@
                                     Готовить по рецептам, предложенным
                                     на основании содержимого холодильника
                                 </h5>
+                            </div>
+                            <div class="card-footer p-0 d-grid border-0">
+                                <span class="badge bg-apple in-dev">В разработке</span>
                             </div>
                         </div>
                     </a>
